[gd_scene load_steps=8 format=3 uid="uid://bon2x0dd78db"]

[ext_resource type="Script" uid="uid://dghl445s8sb3a" path="res://Scenes/hud.gd" id="1_bjfho"]
[ext_resource type="FontFile" uid="uid://wbicl07qqy7g" path="res://Assets/fonts/LuckiestGuy-Regular.ttf" id="1_e0onf"]
[ext_resource type="Texture2D" uid="uid://crlirvccqotls" path="res://Assets/items/pixel heart 2.png" id="2_fccik"]

[sub_resource type="LabelSettings" id="LabelSettings_fccik"]
font = ExtResource("1_e0onf")
font_size = 32

[sub_resource type="FontVariation" id="FontVariation_bjfho"]
base_font = ExtResource("1_e0onf")
spacing_bottom = -24

[sub_resource type="LabelSettings" id="LabelSettings_6fbih"]
font = SubResource("FontVariation_bjfho")
font_size = 100

[sub_resource type="LabelSettings" id="LabelSettings_bjfho"]
font = SubResource("FontVariation_bjfho")
font_size = 20

[node name="HUD" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bjfho")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "00000"
label_settings = SubResource("LabelSettings_fccik")

[node name="HBHearts" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="H1" type="TextureRect" parent="MarginContainer/HBHearts"]
layout_mode = 2
texture = ExtResource("2_fccik")
stretch_mode = 4

[node name="H2" type="TextureRect" parent="MarginContainer/HBHearts"]
layout_mode = 2
texture = ExtResource("2_fccik")
stretch_mode = 4

[node name="H3" type="TextureRect" parent="MarginContainer/HBHearts"]
layout_mode = 2
texture = ExtResource("2_fccik")
stretch_mode = 4

[node name="H4" type="TextureRect" parent="MarginContainer/HBHearts"]
layout_mode = 2
texture = ExtResource("2_fccik")
stretch_mode = 4

[node name="H5" type="TextureRect" parent="MarginContainer/HBHearts"]
layout_mode = 2
texture = ExtResource("2_fccik")
stretch_mode = 4

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.003921569, 0.09803922, 0.8666667)

[node name="VBGameOver" type="VBoxContainer" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -24.5
offset_right = 43.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect/VBGameOver"]
layout_mode = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_6fbih")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ColorRect/VBGameOver"]
layout_mode = 2
text = "Press Space"
label_settings = SubResource("LabelSettings_bjfho")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBLevelComplete" type="VBoxContainer" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -24.5
offset_right = 43.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect/VBLevelComplete"]
layout_mode = 2
text = "Level Complete"
label_settings = SubResource("LabelSettings_6fbih")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ColorRect/VBLevelComplete"]
layout_mode = 2
text = "Press Space"
label_settings = SubResource("LabelSettings_bjfho")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CompleteTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="CompleteTimer" to="." method="_on_complete_timer_timeout"]
